<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#22223A"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.album.AlbumCreateActivity">

    <TextView
        android:id="@+id/titleCrear"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/crear_album"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelCrearNombre"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCrear" />

    <EditText
        android:id="@+id/editCrearNombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_light"
        android:inputType="text"
        android:hint="@string/nombre_del_album"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:maxLength="100"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearNombre" />

    <TextView
        android:id="@+id/labelCrearCover"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/cover"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCrearNombre" />

    <EditText
        android:id="@+id/editCrearCover"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_light"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:maxLength="300"
        android:hint="@string/url_de_la_imagen_cover"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearCover" />

    <TextView
        android:id="@+id/labelCrearFecha"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/fecha_de_salida_al_mercado"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCrearCover" />

    <TextView
        android:id="@+id/editCrearFecha"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_light"
        android:inputType="date"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:paddingVertical="8dp"
        android:textSize="17sp"
        android:hint="@string/fecha_de_salida_al_mercado2"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearFecha" />

    <TextView
        android:id="@+id/labelCrearDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCrearFecha" />

    <EditText
        android:id="@+id/editCrearDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/poppins_light"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:maxLength="350"
        android:hint="@string/descripcion_del_album"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearDescripcion" />

    <TextView
        android:id="@+id/labelCrearGenero"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/genero"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCrearDescripcion" />

    <Spinner
        android:id="@+id/spinnerCrearGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:spinnerMode="dropdown"
        android:popupBackground="@drawable/custom_border"
        android:hint="@string/descripcion_del_album"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearGenero" />

    <TextView
        android:id="@+id/labelCrearCasa"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="27dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/casa_discografica"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCrearGenero" />

    <Spinner
        android:id="@+id/spinnerCrearCasa"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/spinner_style"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:spinnerMode="dropdown"
        android:popupBackground="@drawable/custom_border"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearCasa" />

    <Button
        android:id="@+id/buttonCrearAlbum"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/custom_border"
        android:fontFamily="@font/poppins_light"
        android:text="@string/crear"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCrearCasa" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>