<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22223A"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/titleVinilos"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/usuarioEdit"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/usuario"
        android:inputType="text|textEmailAddress"
        android:paddingStart="40dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBienvenido" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginTop="11.5dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/usuarioEdit"
        app:layout_constraintTop_toTopOf="@+id/usuarioEdit"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/ingresarButton"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/poppins_light"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaEdit" />

    <EditText
        android:id="@+id/contrasenaEdit"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:paddingStart="40dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioEdit" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginTop="11.5dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/contrasenaEdit"
        app:layout_constraintTop_toTopOf="@+id/contrasenaEdit"
        app:srcCompat="@drawable/unlock" />

    <TextView
        android:id="@+id/titleBienvenido"
        android:layout_width="159dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/bienvenidos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleVinilos" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/vynil_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vinyl" />

</androidx.constraintlayout.widget.ConstraintLayout>