<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#22223A"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#22223A"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        tools:context=".ui.coleccionista.ColeccionistaDetalleActivity">


        <TextView
            android:id="@+id/titleColeccionistaDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/poppins_light"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/labelColeccionistaDetalleArtistas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/artistas_favoritos"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleColeccionistaDetalle" />

        <LinearLayout
            android:id="@+id/coleccionistaArtistasLayout"
            android:layout_width="wrap_content"
            android:minWidth="356dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelColeccionistaDetalleArtistas">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coleccionistaArtistasRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/artistasEmptyTextColeccionista"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/no_hay_artistas_favoritos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/labelColeccionistaDetalleAlbumes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/albums"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coleccionistaArtistasLayout" />

        <LinearLayout
            android:id="@+id/coleccionistaAlbumesLayout"
            android:layout_width="wrap_content"
            android:minWidth="356dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelColeccionistaDetalleAlbumes">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coleccionistaAlbumesRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layoutManager="GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/albumesEmptyTextColeccionista"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/el_coleccionista_no_tiene_albumes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>